syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.springframework.grpc.sample.proto";
option java_outer_classname = "FooProto";
service Foo {
    // Sends a greeting
    rpc Echo (EchoRequest) returns (EchoRequest) {}
}

message EchoRequest {
    optional string name = 1;
}